--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,5 +37,14 @@ th {
 }
 
 .hover-blue {
-  @apply bg-blue-300 hover:bg-blue-500 focus:outline-none transition-colors;
+  @apply bg-blue-300 hover:bg-blue-500 focus:bg-blue-500 focus:outline-none transition-colors;
+}
+
+.border-gray {
+  @apply border-gray-300 border-2;
+}
+
+summary:focus {
+  outline: none;
+  cursor: pointer;
 }
